--- a/01-Conceptos-Basicos/clases-y-objetos/Ejercicio 1/README
+++ b/01-Conceptos-Basicos/clases-y-objetos/Ejercicio 1/README
@@ -1,23 +1,63 @@
-# Ejercicio 01:
-
-Diseñe la clase Trabajador con los atributos públicos: codigo (int), 
-nombre (String), horas trabajadas (int) y tarifa por hora (double).
-
-Implemente además: - - - - 
-Un método que retorne el sueldo bruto (horas * tarifa). 
-Un método que retorne el descuento por AFP (10% del sueldo bruto). 
-Un método que retorne el descuento por EPS (5% del sueldo bruto). 
-Un método que retorne el sueldo neto (sueldo bruto – descuentoAFP – descuentoEPS). 
-En la clase principal, a la pulsación del botón Procesar: - - - 
-Declare y cree un objeto de tipo Expositor. 
-Ingrese datos fijos. 
-Visualice todos sus datos. 
-
-**Nivel:** 🟢 Básico  
-**Conceptos:** Clases, Objetos, Métodos
+# 💼 Ejercicio 01: Clase Trabajador
 
 ## 🎯 Objetivo
-Crear una clase Trabajador que calcule sueldo bruto, descuentos y sueldo neto, ingresando los datos fijos.
+Diseñar e implementar una clase `Trabajador` que permita calcular el sueldo bruto, descuentos y sueldo neto de un empleado, aplicando conceptos básicos de programación orientada a objetos.
+
+## 📋 Descripción del Problema
+
+Crear una clase `Trabajador` que maneje la información básica de un empleado y realice los cálculos necesarios para determinar su remuneración neta.
+
+### 🔧 Especificaciones Técnicas
+
+#### Atributos de la Clase (públicos)
+- `codigo` *(int)*: Identificador único del trabajador
+- `nombre` *(String)*: Nombre completo del trabajador  
+- `horasTrabajadas` *(int)*: Total de horas laboradas
+- `tarifaPorHora` *(double)*: Pago por hora trabajada
+
+#### Métodos Requeridos
+- **`calcularSueldoBruto()`**: Retorna el sueldo bruto (horas × tarifa)
+- **`calcularDescuentoAFP()`**: Retorna el descuento por AFP (10% del sueldo bruto)
+- **`calcularDescuentoEPS()`**: Retorna el descuento por EPS (5% del sueldo bruto)
+- **`calcularSueldoNeto()`**: Retorna el sueldo neto (bruto - AFP - EPS)
+
+## 🎚️ Información del Ejercicio
+
+| Característica | Valor |
+|----------------|-------|
+| **Nivel** | 🟢 Básico |
+| **Conceptos** | Clases, Objetos, Métodos |
+| **Lenguaje** | Java |
+
+## 💡 Ejemplo de Salida Esperada
+
+```
+=== DATOS DEL TRABAJADOR ===
+Código: 1001
+Nombre: Juan Carlos Pérez
+Horas trabajadas: 160
+Tarifa por hora: S/. 15.50
+
+=== CÁLCULOS ===
+Sueldo bruto: S/. 2480.00
+Descuento AFP (10%): S/. 248.00
+Descuento EPS (5%): S/. 124.00
+Sueldo neto: S/. 2108.00
+```
 
 ## 📋 Ver Solución
-- [Código fuente](src/)
+
+- 📄 [Clase Trabajador](src/Trabajador.java)
+- 🏃 [Clase Principal](src/Principal.java)
+
+## 🎓 Conceptos Aplicados
+
+- **Encapsulamiento**: Organización de datos y métodos en una clase
+- **Métodos de cálculo**: Implementación de lógica de negocio
+- **Instanciación**: Creación y uso de objetos
+- **Formateo de salida**: Presentación clara de resultados
+
+## 📚 Recursos Adicionales
+
+- [Documentación de Java - Clases y Objetos](https://docs.oracle.com/javase/tutorial/java/javaOO/)
+- [Guía de estilo de código Java](https://google.github.io/styleguide/javaguide.html)
